--- a/Rename.9_V2/Rename.9/Episode-Names.csproj
+++ b/Rename.9_V2/Rename.9/Episode-Names.csproj
@@ -110,6 +110,7 @@
     <Compile Include="FileFolderDialog.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FileInfoComparator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
