Bugfixes and Updater
Implemented Updater
Some refactoring
Adjusted search of "fernsehserien.de"

--- a/Rename.9_V2/Rename.9/App.config
+++ b/Rename.9_V2/Rename.9/App.config
@@ -49,6 +49,9 @@
             <setting name="SelectedWebsite" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="UpdateDialogShowed" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Episode_Names.Properties.Settings>
     </userSettings>
 </configuration>
