--- a/Rename.9_V2/Rename.9/Episode-Names.csproj
+++ b/Rename.9_V2/Rename.9/Episode-Names.csproj
@@ -78,6 +78,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -89,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions\AbortException.cs" />
+    <Compile Include="Helper\ErrorHelper.cs" />
+    <Compile Include="Helper\MessageHandler.cs" />
+    <Compile Include="Helper\Updater.cs" />
     <Compile Include="View\SearchWebsite.cs">
       <SubType>Form</SubType>
     </Compile>
