--- a/Rename.9/Episode-Names.csproj
+++ b/Rename.9/Episode-Names.csproj
@@ -75,6 +75,12 @@
     <Reference Include="HtmlAgilityPack, Version=1.11.4.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.11.4\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WindowsAPICodePack-Core.1.1.1\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WindowsAPICodePack-Shell.1.1.1\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -111,9 +117,6 @@
     <Compile Include="View\Data_Insert.Designer.cs">
       <DependentUpon>Data_Insert.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\FileFolderDialog.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="StringComparator.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
@@ -130,12 +133,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="View\TestForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\TestForm.Designer.cs">
-      <DependentUpon>TestForm.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="View\SearchWebsite.resx">
       <DependentUpon>SearchWebsite.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -162,9 +159,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\TestForm.resx">
-      <DependentUpon>TestForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
