--- a/CustomControls/CustomControls.csproj
+++ b/CustomControls/CustomControls.csproj
@@ -64,20 +64,6 @@
       <DependentUpon>NotFocusButton.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CollapseGroupBox.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="CollapseGroupBox.Designer.cs">
-      <DependentUpon>CollapseGroupBox.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CustomGroupBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="CustomGroupBox.Designer.cs">
-      <DependentUpon>CustomGroupBox.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Designers\CollapseGroupBoxDesigner.cs" />
-    <Compile Include="Designers\CustomGroupBoxDesigner.cs" />
     <EmbeddedResource Include="CollapsePanel.resx">
       <DependentUpon>CollapsePanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,9 +77,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="CollapseGroupBox.resx">
-      <DependentUpon>CollapseGroupBox.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -106,8 +89,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Resources\minusIcon1.png" />
-    <Content Include="Resources\plusIcon_151.png" />
+    <None Include="Resources\Expand.png" />
+    <None Include="Resources\Collapse.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
