save & restore collapsePanel state

--- a/Rename.9/App.config
+++ b/Rename.9/App.config
@@ -38,19 +38,22 @@
                 <value>False</value>
             </setting>
             <setting name="SR_Search" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="SR_Replace" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Changelog" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="SelectedWebsite" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="UpdateDialogShowed" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="FormatExpanded" serializeAs="String">
+                <value>True</value>
             </setting>
         </Episode_Names.Properties.Settings>
     </userSettings>
