--- a/Rename.9/Properties/Settings.settings
+++ b/Rename.9/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="UpdateDialogShowed" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="FormatExpanded" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
