--- a/Rename.9/Episode-Names.csproj
+++ b/Rename.9/Episode-Names.csproj
@@ -102,7 +102,6 @@
     <Compile Include="Helper\FileHelper.cs" />
     <Compile Include="Helper\HistoryHelper.cs" />
     <Compile Include="Helper\MessageHandler.cs" />
-    <Compile Include="Helper\SettingHelper.cs" />
     <Compile Include="Helper\Updater.cs" />
     <Compile Include="Helper\ViewHelper.cs" />
     <Compile Include="View\SearchWebsite.cs">
@@ -197,6 +196,10 @@
     <ProjectReference Include="..\CustomControls\CustomControls.csproj">
       <Project>{eb7b570b-c0ac-493e-9e48-34647faace41}</Project>
       <Name>CustomControls</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GlobalSettings\GlobalSettings.csproj">
+      <Project>{bcbd5963-6103-4365-9424-f0afacfde9b1}</Project>
+      <Name>GlobalSettings</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
