--- a/Rename.9/Episode-Names.csproj
+++ b/Rename.9/Episode-Names.csproj
@@ -128,6 +128,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="View\SpecialCharacters.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SpecialCharacters.Designer.cs">
+      <DependentUpon>SpecialCharacters.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\SearchWebsite.resx">
       <DependentUpon>SearchWebsite.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -154,6 +160,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\SpecialCharacters.resx">
+      <DependentUpon>SpecialCharacters.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
